--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@clerk/backend": "^2.31.0",
     "@clerk/clerk-expo": "^2.19.23",
     "@gorhom/bottom-sheet": "^5.2.8",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.28",
+    "ai": "^6.0.86",
     "convex": "^1.31.7",
     "expo": "~54.0.33",
     "expo-audio": "^1.1.1",
@@ -29,7 +32,6 @@
     "expo-video": "^3.0.16",
     "expo-web-browser": "^15.0.10",
     "lucide-react-native": "^0.564.0",
-    "openai": "^6.22.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
@@ -53,8 +55,8 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   }
 }
