--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "scheme": "acme",
     "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
     "orientation": "default",
     "web": {
       "output": "static"
@@ -12,6 +13,20 @@
       "expo-router",
       "expo-secure-store",
       "expo-notifications",
+      "expo-asset",
+      "expo-web-browser",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#FFFFFF",
+          "dark": {
+            "backgroundColor": "#000000"
+          }
+        }
+      ],
       [
         "expo-location",
         {
@@ -23,6 +38,14 @@
       "@react-native-community/datetimepicker"
     ],
     "android": {
+      "adaptiveIcon": {
+        "backgroundColor": "#E6F4FE",
+        "foregroundImage": "./assets/images/splash.png",
+        "backgroundImage": "./assets/images/splash.png",
+        "monochromeImage": "./assets/images/splash.png"
+      },
+      "edgeToEdgeEnabled": true,
+      "predictiveBackGestureEnabled": true,
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
@@ -30,7 +53,12 @@
       "package": "com.lmontegu.outia"
     },
     "ios": {
-      "bundleIdentifier": "com.lmontegu.outia"
+      "bundleIdentifier": "com.lmontegu.outia",
+      "supportsTablet": true
+    },
+    "experiments": {
+      "typedRoutes": true,
+      "reactCompiler": true
     }
   }
 }
